Adjusting SecurityConfig to allow front-end requests.